<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <!-- full name -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_phoneNumber"
            android:nextFocusForward="@id/et_phoneNumber"
            android:hint="@string/hint_name">
            <requestFocus />
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <!-- Phone number -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_category"
            android:nextFocusForward="@id/et_category"
            android:hint="@string/hint_phone"/>
    </android.support.design.widget.TextInputLayout>

     <!--Category -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="none"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_address"
            android:nextFocusForward="@id/et_address"
            android:hint="@string/hint_category"/>
    </android.support.design.widget.TextInputLayout>

    <!--<Spinner-->
        <!--android:id="@+id/spnr_category"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Location -->
        <LinearLayout
            android:id="@+id/ll_add_location"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_location"
                android:contentDescription="@string/content_desc_map"
                android:src="@drawable/ic_add_location_black"
                android:layout_width="@dimen/form_icon"
                android:layout_height="@dimen/form_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_location"/>

            <TextView
                android:id="@+id/tv_location_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textColor="@color/error"
                android:text="@string/required"/>

        </LinearLayout>

        <!-- Photo -->
        <com.example.majifix311.ui.views.AttachmentButton
            android:id="@+id/ab_add_photo"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:layout="@layout/view_add_attachment"/>

        <!--<LinearLayout-->
            <!--android:id="@+id/ll_add_photo"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center">-->

            <!--<ImageView-->
                <!--android:id="@+id/iv_add_photo"-->
                <!--android:src="@drawable/ic_add_photo_black"-->
                <!--android:contentDescription="@string/content_desc_photo"-->
                <!--android:layout_width="@dimen/form_icon"-->
                <!--android:layout_height="@dimen/form_icon" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/hint_photo"/>-->

        <!--</LinearLayout>-->

    </LinearLayout>

    <!-- Address -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusDown="@+id/et_description"
            android:nextFocusForward="@id/et_description"
            android:hint="@string/hint_street"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Description -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/hint_description"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit_button"/>

</LinearLayout>
