<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_select_category"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/dialogList"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:divider="@color/separator"
        android:dividerHeight="0.1dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/action_select"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/close"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@id/select"
            android:layout_toLeftOf="@id/select"
            android:layout_centerVertical="true"
            android:text="@string/action_close" />

    </RelativeLayout>
</LinearLayout>
