<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/auth_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/auth_til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/auth_accent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/auth_tiedt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_label_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="@color/auth_disable_text"
            android:textColorHint="@color/auth_primary_dark" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/auth_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColorHint="@color/auth_accent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/auth_tiedt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_label_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/auth_disable_text"
            android:textColorHint="@color/auth_primary_dark" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/auth_btn_signin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_signin_button_height"
        android:layout_marginTop="@dimen/auth_signin_button_margin_top"
        android:background="@drawable/enabled_signin_button"
        android:text="@string/auth_label_signin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/auth_signin_button_text_size" />

</LinearLayout>