<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/separator"
    android:fitsSystemWindows="true" >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp" >

            <ImageView
                android:id="@+id/iv_map"
                android:contentDescription="@string/default_content_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/ic_add_location_black"/>

            <ImageView
                android:id="@+id/iv_photo"
                android:contentDescription="@string/default_content_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/ic_add_photo_black"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_problemDetail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="A Title"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tv_reporter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="ItemCardTextView"
            android:text="@string/reporter_label" />

        <TextView
            android:id="@+id/tv_reporter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ItemCardTextView.Medium" />

        <TextView
            android:id="@+id/tv_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="ItemCardTextView"
            android:text="@string/category_label" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ItemCardTextView.Medium" />

        <TextView
            android:id="@+id/tv_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="ItemCardTextView"
            android:text="@string/location_label" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ItemCardTextView.Medium" />

        <TextView
            android:id="@+id/tv_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="ItemCardTextView"
            android:text="@string/description_label" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ItemCardTextView.Medium" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_add_photo_black"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>
