<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/background">

    <!-- Default error message is "Error loading data from the server" -->
    <!-- Default icon is no Internet connection -->
    <ImageView
        android:id="@+id/iv_errorIcon"
        android:contentDescription="@string/default_content_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_cloud_off_48x48"
        app:layout_constraintBottom_toTopOf="@id/tv_errorMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textColor="@color/darkGray"
        android:text="@string/error_server"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- The retry again button allows user to refresh the page -->
    <ImageView
        android:id="@+id/iv_reload"
        android:contentDescription="@string/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_reload"
        app:layout_constraintTop_toBottomOf="@+id/tv_errorMsg"
        app:srcCompat="@drawable/ic_refresh_blue" />

    <TextView
        android:id="@+id/tv_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:text="@string/refresh"
        android:textColor="@color/accent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_errorMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>
